--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
     "vite": "^7.3.1"
+  },
+  "dependencies": {
+    "@fontsource/public-sans": "^5.2.7",
+    "material-symbols": "^0.40.2"
   }
 }
